Add an undo button to the charts

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -134,7 +134,8 @@
                 "dateFieldEndLabel": "Ende",
                 "setFilterBtnText": "OK",
                 "resetFilterBtnText": "Reset",
-                "selectChartLayerComboLabel": ""
+                "selectChartLayerComboLabel": "",
+                "undoBtnText": "…zurückzoomen"
             }
         }
     },
