HelpPage: work in progress

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -157,13 +157,25 @@
             "data": {
 		        "title": "Hilfe",
 		        "preface":{
-		        			"title": "Vorbemerkung",
-		        			"content": "Am 14. Februar 2009 trat in Deutschland das Geodatenzugangsgesetz (GeoZG) in Kraft. Es verpflichtet unter anderem alle Bundesbehörden, Geodaten, die bestimmte Kriterien erfüllen und vorgegebenen Themenfeldern zugeordnet werden können, über Such-, Darstellungs- und Download-Dienste zur Verfügung zu stellen. Dazu hat das BfS eine eigene Anwendung entwickelt. Im BfS sind neben anderen Geodaten vor allem die Daten des „Integrierten Mess- und Informationssystems zur überwachung der Umweltradioaktivität“ (IMIS) betroffen. "
-		        		},
-		        "toolsTitle": "Werkzeuge",
-		        "layerSelectionTitle": "Auswahl",
-		        "mapNavigationTitle": "Navigation",
-		        "legendTitle": "Legende"
+		        	"title": "Vorbemerkung",
+		        	"content": "Am 14. Februar 2009 trat in Deutschland das Geodatenzugangsgesetz (GeoZG) in Kraft. Es verpflichtet unter anderem alle Bundesbehörden, Geodaten, die bestimmte Kriterien erfüllen und vorgegebenen Themenfeldern zugeordnet werden können, über Such-, Darstellungs- und Download-Dienste zur Verfügung zu stellen. Dazu hat das BfS eine eigene Anwendung entwickelt. Im BfS sind neben anderen Geodaten vor allem die Daten des „Integrierten Mess- und Informationssystems zur überwachung der Umweltradioaktivität“ (IMIS) betroffen. "
+		        	},
+		        "tools":{
+		        	"title": "Werkzeuge",
+		        	"content": "Werzeug-Beschreibung..."
+		        	},
+		        "layerSelection": {
+		        	"title": "Auswahl",
+		        	"content": "Auswahl-Beschreibung..."
+		        	},
+		        "mapNavigation":{
+		        	"title": "Navigation",
+		        	"content": "Navigation-Beschreibung..."
+		        	},
+		        "legend":{
+		        	"title": "Legende",
+		        	"content": "Legende-Beschreibung..."
+		        	}
             }
         }	
 	},
