MetadataInfo window cleanups and multiline values

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -131,6 +131,17 @@
             "data": {
                 "name": "Koala"
             }
+        },
+        "statics": {
+            "fieldNames": {
+                "type": "Typ",
+                "name": "Name",
+                "fileIdentifier": "ID",
+                "abstract": "Abstract",
+                "serviceType": "Servicetyp",
+                "source": "Quelle",
+                "contact": "Kontakt"
+            }
         }
     },
     "Koala.view.window.Print": {
