--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -131,6 +131,17 @@
             "data": {
                 "name": "fr:Koala"
             }
+        },
+        "statics": {
+            "fieldNames": {
+                "type": "fr:Typ",
+                "name": "fr:Name",
+                "fileIdentifier": "fr:ID",
+                "abstract": "fr:Abstract",
+                "serviceType": "fr:Servicetyp",
+                "source": "fr:Quelle",
+                "contact": "fr:Kontakt"
+            }
         }
     },
     "Koala.view.window.Print": {
