Tooltips for the help and fullscreen button

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -108,7 +108,8 @@
             "data": {
                 "btnTextFullscreen": "Vollbild",
                 "btnTextHelp": "Hilfe",
-                "btnTextMobile": "Mobile Version"
+                "btnTooltipFullscreen": "Zwischen Vollbildanzeige und Normalansicht wechseln",
+                "btnTooltipHelp": "Hilfe anzeigen"
             }
         }
     },
