Give the tools buttons tooltips

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -85,7 +85,10 @@
     "Koala.view.main.Main": {
         "config": {
             "data": {
+                "addWmsButtonText": "WMS",
+                "addWmsButtonTooltip": "Externen WMS hinzufügen",
                 "printButtonText": "Druck",
+                "printButtonTooltip": "Kartenauschnitt drucken",
                 "buttonGroupTopTitle": "Werkzeuge"
             }
         }
