Give the button to toggle the overview a tooltip

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -89,7 +89,8 @@
                 "addWmsButtonTooltip": "Externen WMS hinzufügen",
                 "printButtonText": "Druck",
                 "printButtonTooltip": "Kartenauschnitt drucken",
-                "buttonGroupTopTitle": "Werkzeuge"
+                "buttonGroupTopTitle": "Werkzeuge",
+                "toogleOverviewBtnTooltip": "Übersichtskarte ein-/ausblenden"
             }
         }
     },
