--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -89,7 +89,8 @@
                 "addWmsButtonTooltip": "en:Externen WMS hinzufügen",
                 "printButtonText": "en:Druck",
                 "printButtonTooltip": "en:Kartenauschnitt drucken",
-                "buttonGroupTopTitle": "en:Werkzeuge"
+                "buttonGroupTopTitle": "en:Werkzeuge",
+                "toogleOverviewBtnTooltip": "en:Übersichtskarte ein-/ausblenden"
             }
         }
     },
