--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -50,7 +50,8 @@
         "config": {
             "data": {
                 "emptyText": "en:Multisuche",
-                "fieldLabel": ""
+                "fieldLabel": "",
+                "tooltip": "en:Räumliche Suche und Suche in den daten und Diensten des BfS"
             }
         }
     },
