Minor: fix typo in tooltip

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -51,7 +51,7 @@
             "data": {
                 "emptyText": "Multisuche",
                 "fieldLabel": "",
-                "tooltip": "Räumliche Suche und Suche in den daten und Diensten des BfS"
+                "tooltip": "Räumliche Suche und Suche in den Daten und Diensten des BfS"
             }
         }
     },
