--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -51,7 +51,7 @@
             "data": {
                 "emptyText": "en:Multisuche",
                 "fieldLabel": "",
-                "tooltip": "en:Räumliche Suche und Suche in den daten und Diensten des BfS"
+                "tooltip": "en:Räumliche Suche und Suche in den Daten und Diensten des BfS"
             }
         }
     },
