Add an additional text next to the themeswitcher toggle
See #1292.

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -113,7 +113,8 @@
         "config": {
             "data": {
                 "title": "Auswahl",
-                "tooltip": "LayerSet wechseln"
+                "tooltip": "LayerSet wechseln",
+                "tooltext": "Thema wechseln"
             }
         }
     },
