HelpPage: work in progress

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -155,7 +155,13 @@
 	"Koala.view.window.HelpWindow": {
         "config": {
             "data": {
-		        "title": "Hilfe",
+		        "title": "Hilfe"
+            }
+        }	
+	},
+	"Koala.view.window.HelpModel": {
+        "config": {
+            "data": {
 		        "preface":{
 		        	"title": "Vorbemerkung",
 		        	"content": "Am 14. Februar 2009 trat in Deutschland das Geodatenzugangsgesetz (GeoZG) in Kraft. Es verpflichtet unter anderem alle Bundesbehörden, Geodaten, die bestimmte Kriterien erfüllen und vorgegebenen Themenfeldern zugeordnet werden können, über Such-, Darstellungs- und Download-Dienste zur Verfügung zu stellen. Dazu hat das BfS eine eigene Anwendung entwickelt. Im BfS sind neben anderen Geodaten vor allem die Daten des „Integrierten Mess- und Informationssystems zur überwachung der Umweltradioaktivität“ (IMIS) betroffen. "
@@ -177,8 +183,8 @@
 		        	"content": "Legende-Beschreibung..."
 		        	}
             }
-        }	
-	},
+        }
+	},	
 
     "BasiGX.view.button.AddWms": {
         "config": {
