Make warn messages of layerfilter translatable

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -43,7 +43,11 @@
     },
     "Koala.view.form.LayerFilter": {
         "config": {
-            "format": "d.m.Y H:i"
+            "format": "d.m.Y H:i",
+        },
+        "statics": {
+            "warnMsgEndBeforeStart": "Startwert muss vor Endwert liegen.",
+            "warnMsgExceedsMaxDuration": "Startwert und Endwert liegen zu weit auseinander.",
         }
     },
     "Koala.view.form.field.SearchCombo": {
