--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -44,6 +44,10 @@
     "Koala.view.form.LayerFilter": {
         "config": {
             "format": "d/m/Y H:i"
+        },
+        "statics": {
+            "warnMsgEndBeforeStart": "fr:Startwert muss vor Endwert liegen.",
+            "warnMsgExceedsMaxDuration": "fr:Startwert und Endwert liegen zu weit auseinander.",
         }
     },
     "Koala.view.form.field.SearchCombo": {
